use env file for params

--- a/cmd/beatport-scrape/.env
+++ b/cmd/beatport-scrape/.env
@@ -2,3 +2,7 @@
 TimeFrame=30d
 # Genre
 Genre=drum-and-bass
+# Artist Directory
+ArtistDir=../../configs/example_artists.csv
+# Output Directory
+OutputDir=../../output/example_tracks.json
