renaming config/output file

--- a/cmd/beatport-scrape/.env
+++ b/cmd/beatport-scrape/.env
@@ -1,8 +1,8 @@
 # Time Frame 
 TimeFrame=30d
 # Genre
-Genre=drum-and-bass
-# Artist Directory
-ArtistDir=../../configs/example_artists.csv
+Genre=DrumAndBass
+# Artist List Directory
+ArtistDir=../../configs/artists.csv
 # Output Directory
-OutputDir=../../output/example_tracks.json
+OutputDir=../../output/tracks.json
