application should start with placeholders for genre/timeframe env variables.

--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
-# Time Frame 
-TimeFrame=30d
-# Genre
-Genre=DrumAndBass
-# Artist List Directory
-ArtistDir=configs/artists.csv
-# Output Directory
-OutputDir=output/tracks.json
+Genre=
+TimeFrame=
